# MattSQL

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  agents.md  plan.txt  tmp.sql
.devcontainer/: Dockerfile  README.md  devcontainer.json
.githooks/: post-commit  pre-push
.github/workflows/: performance.yml
benchmarks/: README.md  baseline.tsv  grafana_publish.py  mattsql_benchmarks.cpp  perf_visualize.py  performance_test.py  profile_artifacts.py  prometheus_publish.py
docs/: README.md  cleanup_report.md  current_state.md  overview.md  profiling.md  runtime_abi.md
docs/reference/: invariants.md  kernel_runtime_strategy.md  runtime_abi.md
docs/status/: current_state.md
include/mattsql/: engine.hpp  mattsql.hpp  sql_engine.hpp
include/mattsql/abi/: runtime.h
include/mattsql/binder/: binder.hpp  bound_expression.hpp  bound_statement.hpp  default_binder.hpp  expression_utils.hpp
include/mattsql/catalog/: catalog.hpp  hosted_catalog_api.hpp  in_memory_catalog.hpp  schema.hpp  table_info.hpp
include/mattsql/common/: identifier.hpp  query_result.hpp  result_utils.hpp  status.hpp  trace.hpp  types.hpp  value_utils.hpp
include/mattsql/execution/: default_executor.hpp  executor.hpp
include/mattsql/execution/expressions/: evaluator.hpp
include/mattsql/execution/operators/: operator.hpp
include/mattsql/lexer/: lexer.hpp  token.hpp
include/mattsql/optimizer/: default_optimizer.hpp  optimizer.hpp  rule.hpp
include/mattsql/parser/: ast.hpp  parse_error.hpp  parser.hpp
include/mattsql/planner/: default_logical_planner.hpp  default_physical_planner.hpp  logical_plan.hpp  physical_plan.hpp  plan_utils.hpp  planner.hpp
include/mattsql/runtime/: c_abi_platform_runtime.hpp  c_abi_runtime_provider.hpp  hosted_platform_runtime.hpp  platform.hpp
include/mattsql/storage/: block_device.hpp  byte_io.hpp  in_memory_table_storage.hpp  memory_block_device.hpp  table_storage.hpp  tuple_codec.hpp
include/mattsql/storage/btree/: btree_index.hpp
include/mattsql/storage/buffer/: buffer_pool.hpp
include/mattsql/storage/heap/: heap_table.hpp  page_heap_table.hpp
include/mattsql/storage/page/: page.hpp  slotted_page.hpp
include/mattsql/storage/wal/: wal.hpp
include/mattsql/txn/: transaction.hpp  transaction_manager.hpp
observability/: README.md  docker-compose.yml
observability/grafana/: mattsql-performance-dashboard.json
observability/grafana/provisioning/dashboards/: mattsql.yml
observability/grafana/provisioning/datasources/: prometheus.yml
observability/prometheus/: prometheus.yml
scripts/: install-git-hooks.sh
scripts/perf/: local_perf.sh
src/: engine.cpp  main.cpp  sql_engine.cpp
src/binder/: default_binder.cpp  expression_utils.cpp
src/catalog/: hosted_catalog_api.cpp  in_memory_catalog.cpp
src/execution/: default_executor.cpp  expression_evaluator.cpp
src/lexer/: lexer.cpp
src/optimizer/: default_optimizer.cpp
src/parser/: parser.cpp
src/planner/: default_logical_planner.cpp  default_physical_planner.cpp
src/runtime/: c_abi_platform_runtime.cpp  c_abi_runtime_provider.cpp  hosted_platform_runtime.cpp  platform.cpp
src/storage/: in_memory_table_storage.cpp  memory_block_device.cpp  tuple_codec.cpp
src/storage/heap/: page_heap_table.cpp
src/storage/page/: slotted_page.cpp
tests/: abi_layout_tests.cpp  binder_tests.cpp  c_abi_platform_runtime_tests.cpp  c_abi_runtime_provider_tests.cpp  catalog_tests.cpp  engine_tests.cpp  executor_tests.cpp  hosted_platform_runtime_tests.cpp  in_memory_table_storage_tests.cpp  interface_compile_tests.cpp  lexer_tests.cpp  mattsql_test_utils.hpp  memory_block_device_tests.cpp  optimizer_tests.cpp  page_heap_table_tests.cpp  parser_tests.cpp  physical_planner_tests.cpp  planner_tests.cpp  rust_abi_provider_smoke_tests.cpp  slotted_page_tests.cpp  sql_engine_tests.cpp  sql_logic_format.hpp  sql_logic_fuzzer.cpp  sql_logic_support.cpp  sql_logic_support.hpp  sql_logic_tests.cpp  sql_pipeline_test_utils.hpp  test_framework.hpp  test_main.cpp
tests/cli/: trailing_unclosed_comment.sql
tests/cmake/: cli_semicolon_split.cmake
tests/rust/: abi_provider_smoke.rs  abi_runtime_layout.rs  abi_runtime_types.rs
tests/sqllogic/: basic.slt  errors.slt  expressions.slt  tables.slt
